--- a/src/lib/assets/i18n/de.json
+++ b/src/lib/assets/i18n/de.json
@@ -1085,7 +1085,7 @@
       "unarchive": "DSFA wiederherstellen"
     },
     "update_server_url_nok": {
-      "content": "Keine Verbindung möglich.",
+      "content": "TO TRANSLATE - The connection with the server is not possible: please check the filled URL.",
       "introspect": "TO TRANSLATE - The Client ID and Client SECRET have not been validated by the server, please check them."
     },
     "update_server_url_ok": {
