fix: bg translations

--- a/src/lib/assets/i18n/bg.json
+++ b/src/lib/assets/i18n/bg.json
@@ -1117,7 +1117,7 @@
         "title": "Роли в ОВЗД"
       },
       "step3": {
-        "description": "<p><strong>Проверяващите</strong> се включват във втората фаза.</p><p>Те използват юридическата или техническата си експертиза за проверка на качеството и съответствието на обработването.</p><p>Те са, например, длъжностните лица по защита на данните, юрисконсулти, ...</p>",</p>",
+        "description": "<p><strong>Проверяващите</strong> се включват във втората фаза.</p><p>Те използват юридическата или техническата си експертиза за проверка на качеството и съответствието на обработването.</p><p>Те са, например, длъжностните лица по защита на данните, юрисконсулти, ...</p>",
         "title": "Роли в ОВЗД"
       },
       "step4": {
@@ -1192,7 +1192,7 @@
         "title": "Консултирайте се с валидирана ОВЗД"
       },
       "step2": {
-        "description": "Необходимо е на всяка ОВЗД да се извършва редовен преглед. Можете да я редактирате или копирате по всяко време за да прегледате съдържанието й в зависимост от промените в обработването
+        "description": "Необходимо е на всяка ОВЗД да се извършва редовен преглед. Можете да я редактирате или копирате по всяко време за да прегледате съдържанието й в зависимост от промените в обработването.",
         "title": "Актуализирайте валидирана (утвърдена) ОВЗД"
       }
     }
